fix index.html overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,9 @@
 :root {
 	/* color palette */
 	--black: #000000;
-	--white: #EEEEEE;
 	--background: #222222;
 	--paperbg: #DDDDDD;
+	--white: #EEEEEE;
 }
 
 html {
@@ -42,10 +42,11 @@ article {
 	/* size & position */
 	width: 80%; /* change from 80vw */
 	min-height: 70vh;
+	max-height: 70vh;
 	margin: 3vh auto;
 	padding: 3vw 3vh;
 
-	overflow: hidden; /* not working now */
+	overflow: scroll; /* not working now */
 
 	/* font and text */
 	text-align: justify;
@@ -53,29 +54,4 @@ article {
 	/* color */
 	background-color: var(--black);
 	color: var(--white);
-}
-
-#screen {
-	overflow: hidden;
-}
-
-/* the only image is #amir. */
-img {
-	/* size & position */
-	margin: 10vh auto;
-	display: block;
-	height: 10vw;
-	width: 10vw;
-}
-
-div {
-	background-color: var(--white);
-	color: red;
-	padding: 5px;
-	margin: 10vh auto;
-	width: 15vw;
-	max-width: 20vw;
-	border-radius: 50vh;
-	text-align: center;
-	font-size: 3vw;
 }
